fixed slider position and overflow bug

--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -1,42 +1,17 @@
-// * {
-//   box-sizing: border-box;
-// }
-
-// html,
-// body {
-//   overscroll-behavior-y: contain;
-//   margin: 0;
-//   padding: 0;
-//   height: 100%;
-//   width: 100%;
-//   // user-select: none;
-//   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
-//     segoe ui, arial, sans-serif;
-//   position: fixed;
-//   overflow: hidden;
-// }
-
-// #root {
-
-//   // position: fixed;
-//   // overflow: auto;
-//   // width: 100%;
-//   // height: 100%;
-//   // cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
-//   //   auto;
-// }
+body {
+  overflow-x: hidden;
+}
 
 #projects > div {
-  // overflow: auto;
   user-select: none;
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: center;
-  // align-items: center;
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100%;
+  height: 65%;
   will-change: transform;
+  background-color: #F3F3F3;
+  margin: auto;
+  // border-color: aqua;
+  // border-style: dashed;
 }
 
 #projects > div > div {
@@ -49,8 +24,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 30%;
-  height: 30%;
+  width: 30em;
+  height: 60%;
   will-change: transform;
   box-shadow: 0 62.5px 125px -25px rgba(50, 50, 73, 0.5), 0 15.5px 15px -20.5px rgba(0, 0, 0, 0.6);
 }
@@ -69,12 +44,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  max-width: 65%;
+  margin: auto;
+  padding-bottom: 2%;
 }
 
 .nav--item {
   display: flex;
   flex-direction: row;
-  // justify-content: space-around;
   align-items: center;
   margin: auto;
   width: 45px;
